fix(console): align Bring your UI card colors with figma

--- a/packages/toolkit/core-kit/scss/_console-themes.scss
+++ b/packages/toolkit/core-kit/scss/_console-themes.scss
@@ -166,6 +166,7 @@
   --color-specific-focused-inside: var(--color-primary-30);
   --color-specific-focused-outside: var(--color-primary-40);
   --color-specific-button-icon: rgba(255, 255, 255, 70%); // 70% static white
+  --color-overlay-primary-subtle: rgba(93, 52, 242, 4%); // 4% Primary-40
   --color-overlay-primary-hover: rgba(93, 52, 242, 8%); // 8% Primary-40
   --color-overlay-primary-pressed: rgba(93, 52, 242, 12%); // 12% Primary-40
   --color-function-n-overlay-primary-focused: rgba(93, 52, 242, 16%); // 16% Primary-40
@@ -390,6 +391,7 @@
   --color-specific-focused-inside: var(--color-primary-40);
   --color-specific-focused-outside: rgba(#cabeff, 32%); // 32% Primary-40
   --color-specific-button-icon: rgba(255, 255, 255, 60%); // 60% static white
+  --color-overlay-primary-subtle: rgba(202, 190, 255, 4%); // 4% Primary-40
   --color-overlay-primary-hover: rgba(202, 190, 255, 8%); // 8% Primary-40
   --color-overlay-primary-pressed: rgba(202, 190, 255, 12%); // 12% Primary-40
   --color-function-n-overlay-primary-focused: rgba(202, 190, 255, 16%); // 16% Primary-40
